// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio component Should match the snapshot 1`] = `
<div
  className="FieldGroup-sc-1ksesv8-0 jFrSKp"
>
  
  <textarea
    className="Textarea__Textfield-sc-19iy8fu-0 jEpFzt"
    id=""
    maxLength={300}
    name=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder=""
    value=""
  />
  <div
    className="Textarea__Infos-sc-19iy8fu-1 gOksil"
  >
    
    <span
      className="Textarea__Countdown-sc-19iy8fu-2 eILLae"
    >
      300
    </span>
  </div>
</div>
`;

exports[`Radio component with a label should match the snapshot 1`] = `
<div
  className="FieldGroup-sc-1ksesv8-0 jFrSKp"
>
  <label
    className="Label-inke2y-0 gpnWva"
    htmlFor="textarea"
  >
     
    Text label
     
  </label>
  <textarea
    className="Textarea__Textfield-sc-19iy8fu-0 jEpFzt"
    id="textarea"
    maxLength={300}
    name=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder=""
    value=""
  />
  <div
    className="Textarea__Infos-sc-19iy8fu-1 gOksil"
  >
    
    <span
      className="Textarea__Countdown-sc-19iy8fu-2 eILLae"
    >
      300
    </span>
  </div>
</div>
`;

exports[`Radio component with an error message should match the snapshot 1`] = `
<div
  className="FieldGroup-sc-1ksesv8-0 jFrSKp"
>
  
  <textarea
    className="Textarea__Textfield-sc-19iy8fu-0 kNTgXG"
    id=""
    maxLength={300}
    name=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder=""
    value=""
  />
  <div
    className="Textarea__Infos-sc-19iy8fu-1 gOksil"
  >
    <div
      className="ErrorMessage-o8xm0w-0 cMosjL"
    >
      Error message
    </div>
    <span
      className="Textarea__Countdown-sc-19iy8fu-2 eILLae"
    >
      300
    </span>
  </div>
</div>
`;
